# sar

./: .gitignore  attention_masks.py  base_chunk_transformer.py  base_transformer.py  block_ntp.py  inference_multi_loss.py  invertible_sar_transformer.py  main.py  mask_train.py  multi_loss_transformer.py  parse_logs.py  pyproject.toml  train.py  transformer.py  transformer_utils.py
configs/: base.yaml  base_chunk.yaml  block_ntp.yaml  block_ntp_incl_mask.yaml  block_ntp_incl_mask_disjoint.yaml  block_ntp_larger_decoder.yaml  custom_default.yaml  custom_sar.yaml  default_base.yaml  default_neo.yaml  glue_neo_4.yaml  invertible.yaml  mini_glue_neo_4.yaml  multi_loss.yaml  multi_loss_default.yaml  multi_loss_low_repr.yaml  multi_loss_no_latent.yaml  multi_loss_no_repr.yaml  ntp_5_layer.yaml  ntp_base.yaml  ntp_large.yaml  ntp_small.yaml  ntp_small_2_layer.yaml  overlap_base.yaml  sar_base.yaml  sar_neo_4.yaml  sar_neo_4_4x_dim.yaml
